Remove thread stack setting and size analysis for 64-bit.